update swagger and login's response
